Fixed bug #35273 (Error in mapping soap - java types)